--- a/Margit.html
+++ b/Margit.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/boss.css">
   <title>Royaume Tequilien</title>
 </head>
-<a href="Tequila.html"><img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" /></a>
+<a href="index.html"><img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" /></a>
 <header>
   <nav>
     <!-- Partie Menu -->
@@ -17,22 +17,22 @@
       <li class="border"><a href=index-Résuméjeux.html target="_blank">Résumé du Jeux</a></li>
       <li class="bossList"><a>Boss</a>
         <div class="bossItems">
-                <a href="Margit.html">Margit le déchu</a>
-                <a href="Godrick.html">Godrick le greffé</a>
-                <a href="Rennala.html"> Rennala, reine de la pleine lune </a>
-                <a href="Radahn.html">Radahn, fléau des astres</a>
-                <a href="Gargouilles.html">Gargouilles vaillantes</a>
-                <a href="Godfrey.html">Godfrey, premier seigneur d'Elden</a>
-                <a href="Morgott.html">Morgott, roi des réprouvés</a>
-                <a href="Mohg.html">Mohg le réprouvé</a>
-                <a href="Astel.html">Astel le rejeton du vide</a>
-                <a href="Géant.html">Géant de feu</a>
-                <a href="Mohgwyn.html">Mohgwyn, seigneur du sang</a>
-                <a href="Serpent.html">Serpent dévoreur de dieux et Rykard le blasphémateur</a>
-                <a href="Malenia.html">Malenia, épée de Miquella</a>
-                <a href="Maliketh.html">Maliketh, la lame d'ébène</a>
-                <a href="Haorah.html">Haorah Loux</a>
-                <a href="Radagon.html">Radagon de l'Ordre d'or et Bête d'Elden</a>
+          <a href="Margit.html">Margit le déchu</a>
+          <a href="Godrick.html">Godrick le greffé</a>
+          <a href="Rennala.html"> Rennala, reine de la pleine lune </a>
+          <a href="Radahn.html">Radahn, fléau des astres</a>
+          <a href="Gargouilles.html">Gargouilles vaillantes</a>
+          <a href="Godfrey.html">Godfrey, premier seigneur d'Elden</a>
+          <a href="Morgott.html">Morgott, roi des réprouvés</a>
+          <a href="Mohg.html">Mohg le réprouvé</a>
+          <a href="Astel.html">Astel le rejeton du vide</a>
+          <a href="Géant.html">Géant de feu</a>
+          <a href="Mohgwyn.html">Mohgwyn, seigneur du sang</a>
+          <a href="Serpent.html">Serpent dévoreur de dieux et Rykard le blasphémateur</a>
+          <a href="Malenia.html">Malenia, épée de Miquella</a>
+          <a href="Maliketh.html">Maliketh, la lame d'ébène</a>
+          <a href="Haorah.html">Haorah Loux</a>
+          <a href="Radagon.html">Radagon de l'Ordre d'or et Bête d'Elden</a>
       </li>
       <li class="border"><a href="https://mapgenie.io/elden-ring/maps/the-lands-between" target="_blank">Carte
           Interactive</a></li>
