--- a/Rennala.html
+++ b/Rennala.html
@@ -2,125 +2,122 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/boss.css">
-    <title>Royaume Tequilien</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/boss.css">
+  <title>Royaume Tequilien</title>
 </head>
-<a href="Tequila.html"><img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" /></a>
+<a href="index.html"><img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" /></a>
 <header>
-    <nav>
-        <!-- Partie Menu -->
-        <div class="fullMenu">
-            <li class="border"><a href=index-Résuméjeux.html target="_blank">Résumé du Jeux</a></li>
-            <li class="bossList"><a>Boss</a>
-                <div class="bossItems">
-                    <a href="Margit.html">Margit le déchu</a>
-                    <a href="Godrick.html">Godrick le greffé</a>
-                    <a href="Rennala.html"> Rennala, reine de la pleine lune </a>
-                    <a href="Radahn.html">Radahn, fléau des astres</a>
-                    <a href="Gargouilles.html">Gargouilles vaillantes</a>
-                    <a href="Godfrey.html">Godfrey, premier seigneur d'Elden</a>
-                    <a href="Morgott.html">Morgott, roi des réprouvés</a>
-                    <a href="Mohg.html">Mohg le réprouvé</a>
-                    <a href="Astel.html">Astel le rejeton du vide</a>
-                    <a href="Géant.html">Géant de feu</a>
-                    <a href="Mohgwyn.html">Mohgwyn, seigneur du sang</a>
-                    <a href="Serpent.html">Serpent dévoreur de dieux et Rykard le blasphémateur</a>
-                    <a href="Malenia.html">Malenia, épée de Miquella</a>
-                    <a href="Maliketh.html">Maliketh, la lame d'ébène</a>
-                    <a href="Haorah.html">Haorah Loux</a>
-                    <a href="Radagon.html">Radagon de l'Ordre d'or et Bête d'Elden</a>
-            </li>
-            <li class="border"><a href="https://mapgenie.io/elden-ring/maps/the-lands-between" target="_blank">Carte
-                    Interactive</a></li>
-            <li class="border"><a href="https://eldenring.wiki.fextralife.com/Elden+Ring+Wiki" target="_blank">Wiki
-                    EldenRing</a></li>
-            <li class="bossList border"><a>Équipement</a>
-                <div class="bossItems">
-                    <a>Arme :</a>
-                    <a>Arme Légère</a>
-                    <a>Arme à une main</a>
-                    <a>Arme à deux mains</a>
-                    <a>Arc</a>
-                    <a>Arbalète</a>
-                    <a>Bouclier</a>
-                    <a>Armure :</a>
-                    <a>Armure Légère</a>
-                    <a>Armure Intermédiaire</a>
-                    <a>Armure lourde</a>
-                    <a>Magie :</a>
-                    <a>Sorcellerie</a>
-                    <a>Incantations</a>
-                </div>
-            </li>
-            <li class="border"><a href="">PNJ</a></li>
+  <nav>
+    <!-- Partie Menu -->
+    <div class="fullMenu">
+      <li class="border"><a href=index-Résuméjeux.html target="_blank">Résumé du Jeux</a></li>
+      <li class="bossList"><a>Boss</a>
+        <div class="bossItems">
+          <a href="Margit.html">Margit le déchu</a>
+          <a href="Godrick.html">Godrick le greffé</a>
+          <a href="Rennala.html"> Rennala, reine de la pleine lune </a>
+          <a href="Radahn.html">Radahn, fléau des astres</a>
+          <a href="Gargouilles.html">Gargouilles vaillantes</a>
+          <a href="Godfrey.html">Godfrey, premier seigneur d'Elden</a>
+          <a href="Morgott.html">Morgott, roi des réprouvés</a>
+          <a href="Mohg.html">Mohg le réprouvé</a>
+          <a href="Astel.html">Astel le rejeton du vide</a>
+          <a href="Géant.html">Géant de feu</a>
+          <a href="Mohgwyn.html">Mohgwyn, seigneur du sang</a>
+          <a href="Serpent.html">Serpent dévoreur de dieux et Rykard le blasphémateur</a>
+          <a href="Malenia.html">Malenia, épée de Miquella</a>
+          <a href="Maliketh.html">Maliketh, la lame d'ébène</a>
+          <a href="Haorah.html">Haorah Loux</a>
+          <a href="Radagon.html">Radagon de l'Ordre d'or et Bête d'Elden</a>
+      </li>
+      <li class="border"><a href="https://mapgenie.io/elden-ring/maps/the-lands-between" target="_blank">Carte
+          Interactive</a></li>
+      <li class="border"><a href="https://eldenring.wiki.fextralife.com/Elden+Ring+Wiki" target="_blank">Wiki
+          EldenRing</a></li>
+      <li class="bossList border"><a>Équipement</a>
+        <div class="bossItems">
+          <a>Arme :</a>
+          <a>Arme Légère</a>
+          <a>Arme à une main</a>
+          <a>Arme à deux mains</a>
+          <a>Arc</a>
+          <a>Arbalète</a>
+          <a>Bouclier</a>
+          <a>Armure :</a>
+          <a>Armure Légère</a>
+          <a>Armure Intermédiaire</a>
+          <a>Armure lourde</a>
+          <a>Magie :</a>
+          <a>Sorcellerie</a>
+          <a>Incantations</a>
         </div>
-    </nav>
+      </li>
+      <li class="border"><a href="">PNJ</a></li>
+    </div>
+  </nav>
 </header>
 
 <body>
-    <section>
-        <h1>Rennala, reine de la pleine lune :</h1>
-        <div class="textform">
-            <img class="image" src="css\image\Rennala.png" alt="Késako ? Where is the picture ?">
-            <div class="box">
-                <p class="titre">- Où se trouve t-il ?</p>
-                <p>
-                    Rennala, reine de la pleine lune, se trouve dans l’Académie de Raya Lucaria. Cependant pour entrer
-                    dans l'académie il faudra trouver une clé à côté d'un dragon pour ouvrir les portes de l'académie.
-                </p>
-                <p class="titre">- Faiblesse/Résistance :</p>
-                <p>
-                    Résistance : Dormir (immunisé), Folie ( Amusé), Fléau Mortel (immunisé),Magie -80% dégâts,
-                    Feu/éclair/saint -20% dégâts phase 1 -40% phase 2
-                    <br>
-                    Faiblesse : Attaque physique standart +10% dégâts, +10% dégâts tranchant, +10% dégâts perforant.
-                </p>
-                <p class="titre">- Style de combat ?</p>
-                <p>
-                    Rennala est une puissante magicienne, elle aura deux phase. La première phase consiste juste à tuer
-                    3 petits monstre pour ensuite frapper Rennala. Ce qui va enclencher la deuxième phase. Ou elle
-                    utilisera plein de sort tout aussi puissant que l'un que l'autre.Il fort conseiller d'esquiver les
-                    sorts et d'infliger le plus de dégâts possible dans un court délai.
-                </p>
-                <p class="titre">- Récompense :</p>
-                <ul>
-                    <li>-40 000 Runes</li>
-                    <br>
-                    <li>-Souvenir de la reine de la pleine lune </li>
-                    <br>
-                    <li>-Grande Rune de l'Enfant à Naître </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="formatage_centre">
-            <h1>Extrait Combat Boss (Moi):</h1>
-            <video class="formatvideo" controls src="" autoplay
-                alt="Le texte à afficher si la vidéo ne se charge"></video>
-        </div>
-    </section>
-    <section>
-        <div class="formatage_centre">
-            <h1>Extrait Attaque Magique :</h1>
-            <video class="formatvideo" controls src="" autoplay
-                alt="Le texte à afficher si la vidéo ne se charge"></video>
-        </div>
-    </section>
-    <section>
-        <div class="formatage_centre">
-            <h1>Extrait Attaque Magique :</h1>
-            <video class="formatvideo" controls src="" autoplay
-                alt="Le texte à afficher si la vidéo ne se charge"></video>
-        </div>
-    </section>
-    <section>
-        <div class="formatage_centre">
-            <h1> Histoire:</h1>
-            <p> </p>
-        </div>
-    </section>
+  <section>
+    <h1>Rennala, reine de la pleine lune :</h1>
+    <div class="textform">
+      <img class="image" src="css\image\Rennala.png" alt="Késako ? Where is the picture ?">
+      <div class="box">
+        <p class="titre">- Où se trouve t-il ?</p>
+        <p>
+          Rennala, reine de la pleine lune, se trouve dans l’Académie de Raya Lucaria. Cependant pour entrer
+          dans l'académie il faudra trouver une clé à côté d'un dragon pour ouvrir les portes de l'académie.
+        </p>
+        <p class="titre">- Faiblesse/Résistance :</p>
+        <p>
+          Résistance : Dormir (immunisé), Folie ( Amusé), Fléau Mortel (immunisé),Magie -80% dégâts,
+          Feu/éclair/saint -20% dégâts phase 1 -40% phase 2
+          <br>
+          Faiblesse : Attaque physique standart +10% dégâts, +10% dégâts tranchant, +10% dégâts perforant.
+        </p>
+        <p class="titre">- Style de combat ?</p>
+        <p>
+          Rennala est une puissante magicienne, elle aura deux phase. La première phase consiste juste à tuer
+          3 petits monstre pour ensuite frapper Rennala. Ce qui va enclencher la deuxième phase. Ou elle
+          utilisera plein de sort tout aussi puissant que l'un que l'autre.Il fort conseiller d'esquiver les
+          sorts et d'infliger le plus de dégâts possible dans un court délai.
+        </p>
+        <p class="titre">- Récompense :</p>
+        <ul>
+          <li>-40 000 Runes</li>
+          <br>
+          <li>-Souvenir de la reine de la pleine lune </li>
+          <br>
+          <li>-Grande Rune de l'Enfant à Naître </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="formatage_centre">
+      <h1>Extrait Combat Boss (Moi):</h1>
+      <video class="formatvideo" controls src="" autoplay alt="Le texte à afficher si la vidéo ne se charge"></video>
+    </div>
+  </section>
+  <section>
+    <div class="formatage_centre">
+      <h1>Extrait Attaque Magique :</h1>
+      <video class="formatvideo" controls src="" autoplay alt="Le texte à afficher si la vidéo ne se charge"></video>
+    </div>
+  </section>
+  <section>
+    <div class="formatage_centre">
+      <h1>Extrait Attaque Magique :</h1>
+      <video class="formatvideo" controls src="" autoplay alt="Le texte à afficher si la vidéo ne se charge"></video>
+    </div>
+  </section>
+  <section>
+    <div class="formatage_centre">
+      <h1> Histoire:</h1>
+      <p> </p>
+    </div>
+  </section>
