--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style_media.css" />
   <title>Royaume Tequilien</title>
 </head>
+
 <a href="index.html">
   <img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" />
 </a>
+<!-- menu de navigation -->
 <header>
   <nav>
     <!-- Partie Menu -->
@@ -72,10 +75,11 @@
     </div>
   </nav>
 </header>
+<!-- corp de la page -->
 
 <body>
   <video id="background-video" autoplay loop muted>
-    <source src="css/image/vidéo/day.mp4" type="video/mp4" />
+    <source src="css/image/video/day.mp4" type="video/mp4" />
   </video>
   <section>
     <h1>
@@ -102,25 +106,25 @@
         <figcaption>
           Boss :
         </figcaption>
-        <img class="fanart" src="css/image/Eldenboss.jpg" />
+        <img class="fanart" src="css/image/Eldenboss.jpg" alt="image indisponible" />
       </figure>
       <figure>
         <figcaption>
           Magie :
         </figcaption>
-        <img class="fanart" src="css\image\Eldenmagie.jpg" />
+        <img class="fanart" src="css\image\Eldenmagie.jpg" alt="image indisponible" />
       </figure>
       <figure>
         <figcaption>
           Paysage :
         </figcaption>
-        <img class="fanart" src="css\image\Eldennpaysage.jpg" />
+        <img class="fanart" src="css\image\Eldennpaysage.jpg" alt="image indisponible" />
       </figure>
       <figure>
         <figcaption>
           PNJ :
         </figcaption>
-        <img class="fanart" src="css\image\Eldenpng.jpg" />
+        <img class="fanart" src="css\image\Eldenpng.jpg" alt="image indisponible" />
       </figure>
     </div>
   </section>
