--- a/Astel.html
+++ b/Astel.html
@@ -6,18 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style_media.css" />
+  <link rel="stylesheet" href="css/animation.css" />
   <link rel="stylesheet" href="css/boss.css" />
   <title>Royaume Tequilien</title>
 </head>
 <a href="index.html">
-  <img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" />
+  <img class="bannière" src="css/image/12922969.jpg" alt="image indisponible" />
 </a>
+<!-- menu de navigation -->
 <header>
   <nav>
     <!-- Partie Menu -->
     <div class="fullMenu">
-      <li class="border">
-        <a href=index-Résuméjeux.html target="_blank">Résumé du Jeux</a>
+      <li>
+        <a href="Résume.html" target="_blank">Résumé du Jeux</a>
       </li>
       <li class="bossList">
         <a>Boss</a>
@@ -40,15 +43,15 @@
           <a href="Radagon.html">Radagon de l'Ordre d'or et Bête d'Elden</a>
         </div>
       </li>
-      <li class="border">
+      <li>
         <a href="https://mapgenie.io/elden-ring/maps/the-lands-between" target="_blank">Carte
           Interactive</a>
       </li>
-      <li class="border">
+      <li>
         <a href="https://eldenring.wiki.fextralife.com/Elden+Ring+Wiki" target="_blank">Wiki
           EldenRing</a>
       </li>
-      <li class="bossList border">
+      <li class="bossList ">
         <a>Équipement</a>
         <div class="bossItems">
           <a>Arme :</a>
@@ -67,12 +70,13 @@
           <a>Incantations</a>
         </div>
       </li>
-      <li class="border">
-        <a href="">PNJ</a>
+      <li>
+        <a href="PNJ.html">PNJ</a>
       </li>
     </div>
   </nav>
 </header>
+<!-- corp de la page -->
 
 <body>
   <section>
@@ -163,3 +167,6 @@
       </p>
     </div>
   </section>
+</body>
+
+</html>
