--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/style_media.css" />
+  <link rel="stylesheet" href="css/animation.css" />
+  <link rel="shortcut icon" type="image/ico" href="css/image/icon/favicon.jpg" />
   <title>Royaume Tequilien</title>
 </head>
 
 <a href="index.html">
-  <img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" />
+  <img class="bannière" src="css/image/12922969.jpg" alt="image indisponible" />
 </a>
 <!-- menu de navigation -->
 <header>
@@ -92,7 +94,7 @@
       <br />
       <a href="https://www.eldenring.com/" target="_blank">Source : https://www.eldenring.com/</a>
     </p>
-    <video class="formatvideo" controls src="css/image/vidéo/VideoElden.mp4" autoplay width="700px" height="450px">
+    <video id="formatvideo" controls src="css/image/video/VideoElden.mp4" autoplay>
       Le
       texte à afficher si la vidéo ne se charge
     </video>
