--- a/Astel.html
+++ b/Astel.html
@@ -84,7 +84,7 @@
       Gargouilles vaillantes:
     </h1>
     <div class="textform">
-      <img class="image" src="css\image/gargouille.png" alt="Késako ? Where is the picture ?">
+      <img class="image" src="css\image/gargouille.png" alt="Késako ? Where is the picture ?"/>
       <div class="box">
         <p class="titre">
           - Où se trouve t-il ?
@@ -100,7 +100,7 @@
           Résistance : Poison (immunisé), pourriture écarlate (immunisé),hémmoragie (immunisé), gelure
           (immunisé), feu/éclair/saint -40% dégâts, magie -20% dégâts, -35% dégâts tranchant/perforant, -10%
           dégâts physique.
-          <br>
+          <br/>
           Faiblesse : Aucune
         </p>
         <p class="titre">
@@ -119,11 +119,11 @@
           <li>
             -32 000 Runes
           </li>
-          <br>
+          <br/>
           <li>
             -Espadon de gargouille
           </li>
-          <br>
+          <br/>
           <li>
             -Lame jumelle de gargouille
           </li>
@@ -163,8 +163,6 @@
       <h1>
         Histoire:
       </h1>
-      <p>
-      </p>
     </div>
   </section>
 </body>
