--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 <!-- corp de la page -->
 
 <body>
+  <embed src="css/audio/Elden_Ring_Main_Theme.mp3" loop="true" autostart="true" width="1" height="0" />
+  <!-- taille de 1 pixel pour outre passer les demandes -->
   <video id="background-video" autoplay loop muted>
     <source src="css/image/video/day.mp4" type="video/mp4" />
   </video>
