correction de 4 page html

--- a/Géant.html
+++ b/Géant.html
@@ -1,126 +1,181 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/style_media.css" />
-  <link rel="stylesheet" href="css/animation.css" />
-  <link rel="stylesheet" href="css/boss.css">
-  <title>Royaume Tequilien</title>
-</head>
-<a href="index.html"><img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" /></a>
-<header>
-  <nav>
-    <!-- Partie Menu -->
-    <div class="fullMenu">
-      <li class="border"><a href=index-Résuméjeux.html target="_blank">Résumé du Jeux</a></li>
-      <li class="bossList"><a>Boss</a>
-        <div class="bossItems">
-          <a href="Margit.html">Margit le déchu</a>
-          <a href="Godrick.html">Godrick le greffé</a>
-          <a href="Rennala.html"> Rennala, reine de la pleine lune </a>
-          <a href="Radahn.html">Radahn, fléau des astres</a>
-          <a href="Gargouilles.html">Gargouilles vaillantes</a>
-          <a href="Godfrey.html">Godfrey, premier seigneur d'Elden</a>
-          <a href="Morgott.html">Morgott, roi des réprouvés</a>
-          <a href="Mohg.html">Mohg le réprouvé</a>
-          <a href="Astel.html">Astel le rejeton du vide</a>
-          <a href="Géant.html">Géant de feu</a>
-          <a href="Mohgwyn.html">Mohgwyn, seigneur du sang</a>
-          <a href="Serpent.html">Serpent dévoreur de dieux et Rykard le blasphémateur</a>
-          <a href="Malenia.html">Malenia, épée de Miquella</a>
-          <a href="Maliketh.html">Maliketh, la lame d'ébène</a>
-          <a href="Haorah.html">Haorah Loux</a>
-          <a href="Radagon.html">Radagon de l'Ordre d'or et Bête d'Elden</a>
-      </li>
-      <li class="border"><a href="https://mapgenie.io/elden-ring/maps/the-lands-between" target="_blank">Carte
-          Interactive</a></li>
-      <li class="border"><a href="https://eldenring.wiki.fextralife.com/Elden+Ring+Wiki" target="_blank">Wiki
-          EldenRing</a></li>
-      <li class="bossList border"><a>Équipement</a>
-        <div class="bossItems">
-          <a>Arme :</a>
-          <a>Arme Légère</a>
-          <a>Arme à une main</a>
-          <a>Arme à deux mains</a>
-          <a>Arc</a>
-          <a>Arbalète</a>
-          <a>Bouclier</a>
-          <a>Armure :</a>
-          <a>Armure Légère</a>
-          <a>Armure Intermédiaire</a>
-          <a>Armure lourde</a>
-          <a>Magie :</a>
-          <a>Sorcellerie</a>
-          <a>Incantations</a>
-        </div>
-      </li>
-      <li class="border"><a href="">PNJ</a></li>
-    </div>
-  </nav>
-</header>
-
-<body>
-  <section>
-    <h1>Gargouilles vaillantes:</h1>
-    <div class="textform">
-      <img class="image" src="css\image/gargouille.png" alt="Késako ? Where is the picture ?">
-      <div class="box">
-        <p class="titre">- Où se trouve t-il ?</p>
-        <p>
-          Les Gargouilles Vaillantes gardent l’une des deux entrées de Profondeur des
-          racines.
-        </p>
-        <p class="titre">- Faiblesse/Résistance :</p>
-        <p>
-          Résistance : Poison (immunisé), pourriture écarlate (immunisé),hémmoragie (immunisé), gelure
-          (immunisé), feu/éclair/saint -40% dégâts, magie -20% dégâts, -35% dégâts tranchant/perforant, -10%
-          dégâts physique.
-          <br>
-          Faiblesse : Aucune
-        </p>
-        <p class="titre">- Style de combat ?</p>
-        <p>
-          Ce boss qui est constituer d'une gargouille équiper d'une épée et hallebarde ainsi qu'une autre avec
-          lance à double lame. Leur attaque sont rapide et précise avec une attaque empoisonnée en zone.
-          Comprendre leur schéma d'attaque et simple. Le plus dur et d'affronter les deux gargouills en même
-          temps.
-        </p>
-        <p class="titre">- Récompense :</p>
-        <ul>
-          <li>-32 000 Runes</li>
-          <br>
-          <li>-Espadon de gargouille</li>
-          <br>
-          <li>-Lame jumelle de gargouille</li>
-        </ul>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style_media.css" />
+    <link rel="stylesheet" href="css/animation.css" />
+    <link rel="stylesheet" href="css/boss.css"/>
+    <title>Royaume Tequilien</title>
+  </head>
+  <a href="index.html">
+    <img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" />
+  </a>
+  <header>
+    <nav>
+      <!-- Partie Menu -->
+      <div class="fullMenu">
+        <li>
+          <a href="Résume.html" target="_blank">Résumé du Jeux</a>
+        </li>
+        <li class="bossList">
+          <a>Boss</a>
+          <div class="bossItems">
+            <a href="Margit.html">Margit le déchu</a>
+            <a href="Godrick.html">Godrick le greffé</a>
+            <a href="Rennala.html">Rennala, reine de la pleine lune</a>
+            <a href="Radahn.html">Radahn, fléau des astres</a>
+            <a href="Gargouilles.html">Gargouilles vaillantes</a>
+            <a href="Godfrey.html">Godfrey, premier seigneur d'Elden</a>
+            <a href="Morgott.html">Morgott, roi des réprouvés</a>
+            <a href="Mohg.html">Mohg le réprouvé</a>
+            <a href="Astel.html">Astel le rejeton du vide</a>
+            <a href="Géant.html">Géant de feu</a>
+            <a href="Mohgwyn.html">Mohgwyn, seigneur du sang</a>
+            <a href="Serpent.html">Serpent dévoreur de dieux et Rykard le blasphémateur</a>
+            <a href="Malenia.html">Malenia, épée de Miquella</a>
+            <a href="Maliketh.html">Maliketh, la lame d'ébène</a>
+            <a href="Haorah.html">Haorah Loux</a>
+            <a href="Radagon.html">Radagon de l'Ordre d'or et Bête d'Elden</a>
+          </div>
+        </li>
+        <li>
+          <a href="https://mapgenie.io/elden-ring/maps/the-lands-between"
+             target="_blank">Carte
+          Interactive</a>
+        </li>
+        <li>
+          <a href="https://eldenring.wiki.fextralife.com/Elden+Ring+Wiki"
+             target="_blank">Wiki
+          EldenRing</a>
+        </li>
+        <li class="bossList ">
+          <a>Équipement</a>
+          <div class="bossItems">
+            <a>Arme :</a>
+            <a>Arme Légère</a>
+            <a>Arme à une main</a>
+            <a>Arme à deux mains</a>
+            <a>Arc</a>
+            <a>Arbalète</a>
+            <a>Bouclier</a>
+            <a>Armure :</a>
+            <a>Armure Légère</a>
+            <a>Armure Intermédiaire</a>
+            <a>Armure lourde</a>
+            <a>Magie :</a>
+            <a>Sorcellerie</a>
+            <a>Incantations</a>
+          </div>
+        </li>
+        <li>
+          <a href="PNJ.html">PNJ</a>
+        </li>
       </div>
-    </div>
-  </section>
-  <section>
-    <div class="formatage_centre">
-      <h1>Extrait Combat Boss (Moi):</h1>
-      <video class="formatvideo" controls src="" autoplay alt="Le texte à afficher si la vidéo ne se charge"></video>
-    </div>
-  </section>
-  <section>
-    <div class="formatage_centre">
-      <h1>Extrait Attaque :</h1>
-      <video class="formatvideo" controls src="" autoplay alt="Le texte à afficher si la vidéo ne se charge"></video>
-    </div>
-  </section>
-  <section>
-    <div class="formatage_centre">
-      <h1> Phase 2 boss:</h1>
-      <video class="formatvideo" controls src="" autoplay alt="Le texte à afficher si la vidéo ne se charge"></video>
-    </div>
-  </section>
-  <section>
-    <div class="formatage_centre">
-      <h1> Histoire:</h1>
-      <p> </p>
-    </div>
-  </section>
+    </nav>
+  </header>
+  <body>
+    <section>
+      <h1>
+        Gargouilles vaillantes:
+      </h1>
+      <div class="textform">
+        <img class="image"
+             src="css\image/gargouille.png"
+             alt="Késako ? Where is the picture ?"/>
+        <div class="box">
+          <p class="titre">
+            - Où se trouve t-il ?
+          </p>
+          <p>
+            Les Gargouilles Vaillantes gardent l’une des deux entrées de Profondeur des
+            racines.
+          </p>
+          <p class="titre">
+            - Faiblesse/Résistance :
+          </p>
+          <p>
+            Résistance : Poison (immunisé), pourriture écarlate (immunisé),hémmoragie (immunisé), gelure
+            (immunisé), feu/éclair/saint -40% dégâts, magie -20% dégâts, -35% dégâts tranchant/perforant, -10%
+            dégâts physique.
+            <br />
+            Faiblesse : Aucune
+          </p>
+          <p class="titre">
+            - Style de combat ?
+          </p>
+          <p>
+            Ce boss qui est constituer d'une gargouille équiper d'une épée et hallebarde ainsi qu'une autre avec
+            lance à double lame. Leur attaque sont rapide et précise avec une attaque empoisonnée en zone.
+            Comprendre leur schéma d'attaque et simple. Le plus dur et d'affronter les deux gargouills en même
+            temps.
+          </p>
+          <p class="titre">
+            - Récompense :
+          </p>
+          <ul>
+            <li>
+              -32 000 Runes
+            </li>
+            <br />
+            <li>
+              -Espadon de gargouille
+            </li>
+            <br />
+            <li>
+              -Lame jumelle de gargouille
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="formatage_centre">
+        <h1>
+          Extrait Combat Boss (Moi):
+        </h1>
+        <video class="formatvideo"
+               controls
+               src=""
+               autoplay
+               alt="Le texte à afficher si la vidéo ne se charge">
+        </video>
+      </div>
+    </section>
+    <section>
+      <div class="formatage_centre">
+        <h1>
+          Extrait Attaque :
+        </h1>
+        <video class="formatvideo"
+               controls
+               src=""
+               autoplay
+               alt="Le texte à afficher si la vidéo ne se charge">
+        </video>
+      </div>
+    </section>
+    <section>
+      <div class="formatage_centre">
+        <h1>
+          Phase 2 boss:
+        </h1>
+        <video class="formatvideo"
+               controls
+               src=""
+               autoplay
+               alt="Le texte à afficher si la vidéo ne se charge">
+        </video>
+      </div>
+    </section>
+    <section>
+      <div class="formatage_centre">
+        <h1>
+          Histoire:
+        </h1>
+      </div>
+    </section>
+  </body>
+</html>
