--- a/Astel.html
+++ b/Astel.html
@@ -11,7 +11,7 @@
     <title>Royaume Tequilien</title>
   </head>
   <a href="index.html">
-    <img class="bannière"
+    <img class="banniere"
          src="css/image/12922969.jpg"
          alt="image indisponible"/>
   </a>
