--- a/Gargouilles.html
+++ b/Gargouilles.html
@@ -11,7 +11,7 @@
     <title>Royaume Tequilien</title>
   </head>
   <a href="index.html">
-    <img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" />
+    <img class="banniere" src="css/image/12922969.jpg" alt="relou ce code" />
   </a>
   <header>
     <nav>
