--- a/PNJ.html
+++ b/PNJ.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style_media.css" />
+    <link rel="stylesheet" href="css/animation.css" />
+    <link rel="shortcut icon"
+          type="image/ico"
+          href="css/image/icon/favicon.jpg"/>
     <link rel="stylesheet" href="css/PNJ.css" />
     <title>Royaume Tequilien</title>
   </head>
   <a href="index.html">
-    <img class="bannière" src="css/image/12922969.jpg" alt="relou ce code" />
+    <img class="banniere" src="css/image/12922969.jpg" alt="relou ce code"/>
   </a>
   <header>
     <nav>
@@ -75,7 +81,7 @@
   </header>
   <body>
     <section class="introblaidd">
-      <table class="centre">
+      <table>
         <thead>
           <tr>
             <th colspan="2">
@@ -85,7 +91,7 @@
         </thead>
         <tbody>
           <tr>
-            <td class="millieu">
+            <td>
               Localisation :
             </td>
             <td>
@@ -95,7 +101,7 @@
         </tbody>
         <tbody>
           <tr>
-            <td class="millieu">
+            <td>
               Rôle :
             </td>
             <td>
@@ -103,7 +109,7 @@
             </td>
           </tr>
           <tr>
-            <td class="millieu">
+            <td>
               Loot :
             </td>
             <td>
@@ -111,21 +117,21 @@
             </td>
           </tr>
           <tr>
-            <td class="millieu">
+            <td>
             </td>
             <td>
               Armure de loup
             </td>
           </tr>
           <tr>
-            <td class="millieu">
+            <td>
             </td>
             <td>
               Gantelets de loup
             </td>
           </tr>
           <tr>
-            <td class="millieu">
+            <td>
             </td>
             <td>
               Grèves de loup
@@ -133,7 +139,7 @@
           </tr>
         </tbody>
         <tr>
-          <td class="millieu">
+          <td>
             Job :
           </td>
           <td>
@@ -141,7 +147,7 @@
           </td>
         </tr>
         <tr>
-          <td class="millieu">
+          <td>
             Relation:
           </td>
           <td>
