--- a/Astel.html
+++ b/Astel.html
@@ -15,6 +15,9 @@
          src="css/image/12922969.jpg"
          alt="image indisponible"/>
   </a>
+  <video id="background-video" autoplay loop muted>
+    <source src="css/image/video/day.mp4" type="video/mp4" />
+  </video>
   <!-- menu de navigation -->
   <header>
     <nav>
