--- a/Godrick.html
+++ b/Godrick.html
@@ -13,6 +13,9 @@
   <a href="index.html">
     <img class="banniere" src="css/image/12922969.jpg" alt="relou ce code" />
   </a>
+  <video id="background-video" autoplay loop muted>
+    <source src="css/image/video/day.mp4" type="video/mp4" />
+  </video>
   <header>
     <nav>
       <!-- Partie Menu -->
