vire moi t'es fucking br

--- a/Godrick.html
+++ b/Godrick.html
@@ -121,14 +121,14 @@
           <p class="titre">
             - Récompense :
           </p>
-          <ul>
-            <li>
+          <ul class="ulzone">
+            <li class="listezone">
               -Rune Majeure de Godrick
             </li>
-            <li>
+            <li class="listezone">
               - Souvenir du Greffé
             </li>
-            <li>
+            <li class="listezone">
               - 20 000 Runes
             </li>
           </ul>
