--- a/Haorah.html
+++ b/Haorah.html
@@ -118,16 +118,14 @@
           <p class="titre">
             - Récompense :
           </p>
-          <ul>
-            <li>
+          <ul class="ulzone">
+            <li class="listezone">
               -32 000 Runes
             </li>
-            <br/>
-            <li>
+            <li class="listezone">
               -Espadon de gargouille
             </li>
-            <br/>
-            <li>
+            <li class="listezone">
               -Lame jumelle de gargouille
             </li>
           </ul>
