--- a/Margit.html
+++ b/Margit.html
@@ -116,14 +116,14 @@
           <p class="titre">
             - Récompense :
           </p>
-          <ul>
-            <li>
+          <ul class="ulzone">
+            <li class="listezone">
               - +1 Sacoche à Talisman
             </li>
-            <li>
+            <li class="listezone">
               - Médaillon d’Ambre Viridien (+11% Endurance)
             </li>
-            <li>
+            <li class="listezone">
               - 12 000 Runes
             </li>
           </ul>
