--- a/Radahn.html
+++ b/Radahn.html
@@ -118,16 +118,14 @@
           <p class="titre">
             - Récompense :
           </p>
-          <ul>
-            <li>
+          <ul class="ulzone">
+            <li class="listezone">
               -70 000 Runes
             </li>
-            <br/>
-            <li>
+            <li class="listezone">
               -Souvenir du Starscourge
             </li>
-            <br/>
-            <li>
+            <li class="listezone">
               -Grande rune de Radahn
             </li>
           </ul>
