--- a/Rennala.html
+++ b/Rennala.html
@@ -117,16 +117,14 @@
           <p class="titre">
             - Récompense :
           </p>
-          <ul>
-            <li>
+          <ul class="ulzone">
+            <li class="listezone">
               -40 000 Runes
             </li>
-            <br/>
-            <li>
+            <li class="listezone">
               -Souvenir de la reine de la pleine lune
             </li>
-            <br/>
-            <li>
+            <li class="listezone">
               -Grande Rune de l'Enfant à Naître
             </li>
           </ul>
